--- a/playbook.yml
+++ b/playbook.yml
@@ -1,5 +1,5 @@
 ---
-- hosts: gameserver01
+- hosts: egeeio01
   tasks:
     - name: Update 7DaysToDie Server
       shell: /bin/bash /home/egee/7dayz/sdtdserver update
